# image-crop-and-optimizer

./: COPYING  meson.build
data/: com.github.thegoldgoat.image-crop-and-optimizer.desktop
src/: imageApplication.vala
